Changes to notebook header to conform to Quarto

--- a/posts/2022-09-20-tesco-price-analysis.ipynb
+++ b/posts/2022-09-20-tesco-price-analysis.ipynb
@@ -1,18 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "aeb3fb6f",
    "metadata": {},
    "source": [
-    "# Looking into food price inflation using data from Tesco\n",
-    "> \"Measuring food price inflation in a way that anyone in the UK can relate to.\"\n",
-    "\n",
-    "- toc: true\n",
-    "- comments: false\n",
-    "- author: Brandon Lee\n",
-    "- categories: [inflation, analysis, visualisation]\n",
-    "- image: images/inflation_post.jpg"
+    "---\n",
+    "title: \"Looking into food price inflation using data from Tesco\"\n",
+    "author: \"Brandon Lee\"\n",
+    "description: \"Measuring food price inflation in a way that anyone in the UK can relate to.\"\n",
+    "date: \"2022/09/20\n",
+    "toc: true\n",
+    "comments: false\n",
+    "categories: [inflation, analysis, visualisation]\n",
+    "image: images/inflation_post.jpg\n",
+    "---"
    ]
   },
   {
