Changed categories of post to work

--- a/posts/2022-09-20-tesco-price-analysis.ipynb
+++ b/posts/2022-09-20-tesco-price-analysis.ipynb
@@ -12,7 +12,10 @@
     "date: \"2022/09/20\n",
     "toc: true\n",
     "comments: false\n",
-    "categories: [inflation, analysis, visualisation]\n",
+    "categories: \n",
+    "    - inflation\n",
+    "    - analysis\n",
+    "    - visualisation\n",
     "image: images/inflation_post.jpg\n",
     "---"
    ]
