Finished adapting inflation notebook to quarto

--- a/posts/2022-09-20-tesco-price-analysis.ipynb
+++ b/posts/2022-09-20-tesco-price-analysis.ipynb
@@ -9,31 +9,24 @@
     "title: \"Looking into food price inflation using data from Tesco\"\n",
     "author: \"Brandon Lee\"\n",
     "description: \"Measuring food price inflation in a way that anyone in the UK can relate to.\"\n",
-    "date: \"2022/09/20\n",
+    "date: \"2022/09/20\"\n",
     "toc: true\n",
     "comments: false\n",
     "categories: \n",
     "    - inflation\n",
     "    - analysis\n",
     "    - visualisation\n",
-    "image: images/inflation_post.jpg\n",
+    "image: inflation_post.jpg\n",
+    "reference-location: margin\n",
     "---"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "caf1c11d",
+   "cell_type": "raw",
+   "id": "385e9856",
    "metadata": {},
    "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "756e0626",
-   "metadata": {},
-   "source": [
-    "![](images/inflation_post.jpg \"Source: https://www.rte.ie/news/business/2022/0908/1321302-cso-inflation-figures/\")"
+    "![Source: https://www.rte.ie/news/business/2022/0908/1321302-cso-inflation-figures/](inflation_post.jpg)"
    ]
   },
   {
@@ -41,7 +34,15 @@
    "id": "49440d8f",
    "metadata": {},
    "source": [
-    "**Disclaimer: The use of data collected for this study is covered by the Intellectual Property Office’s Exceptions to Copyright for Non-Commercial Research and Private Study (https://www.gov.uk/guidance/exceptions-to-copyright). No personal information has been collected as part of this study's data collection process and web scraping best practices implemented to the best of the author's abilities. The collected data will be inaccessible to the public to abide by Section 7 of the Terms and Conditions agreement laid out by Tesco (https://www.tesco.com/help/terms-and-conditions/).**"
+    "**Disclaimer: The use of data collected for this study is covered by the Intellectual Property Office’s Exceptions to Copyright for Non-Commercial Research and Private Study (https://www.gov.uk/guidance/exceptions-to-copyright). No personal information has been collected as part of this study's data collection process and web scraping best practices implemented to the best of the author's abilities. The collected data will be inaccessible to the public to abide by Section 7 of the Terms and Conditions agreement laid out by Tesco PLC (https://www.tesco.com/help/terms-and-conditions/).**"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "da9c45ca",
+   "metadata": {},
+   "source": [
+    "![Consumer Prices Index (CPI), Consumer Prices Index with Housing (CPIH), and Owner Occupier's Housing cost (OOH) component.](Figure_1_Annual_CPIH.png)"
    ]
   },
   {
@@ -50,14 +51,6 @@
    "metadata": {},
    "source": [
     "Since July 2021 the Consumer Prices Index (CPI) inflation rate in the UK has broken away from the Bank of England's target rate of 2%, steadily rising month by month. As of 3rd September 2022, the inflation rate stands at 10.1% with no indication of decreasing. What an awfully depressing way to start a blog post but unfortunately this is the reality that we are all currently facing in the UK. Every month the Office for National Statistics (ONS) calculates CPI by collecting the prices for a basket of around 730 different consumer goods and services that is a representation of the society's current buying habits and measures the average change in price of the basket on a year-over-year basis. At a risk of grossly simplifying, CPI tells us how much prices in general have changed over the last 12 months."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "709f05a4",
-   "metadata": {},
-   "source": [
-    "![](images/Figure_1_Annual_CPIH.png \"Consumer Prices Index (CPI), Consumer Prices Index with Housing (CPIH), and Owner Occupier's Housing cost (OOH) component.\")"
    ]
   },
   {
@@ -92,14 +85,11 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
     "\n",
-    "# Used to enable plotly\n",
+    "# Used to enable plotly to work in VS Code\n",
     "import plotly.io as pio\n",
-    "pio.renderers.default = 'notebook_connected'\n",
-    "from IPython.display import display, HTML\n",
-    "js = '<script src=\"https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js\" integrity=\"sha512-c3Nl8+7g4LMSTdrm621y7kf9v3SDPnhxLNhcjFJbKECVnmZHTdo+IRO05sNLTH/D3vA6u1X32ehoLC7WFVdheg==\" crossorigin=\"anonymous\"></script>'\n",
-    "display(HTML(js))"
+    "pio.renderers.default = \"plotly_mimetype+notebook_connected\"\n"
    ]
   },
   {
@@ -109,7 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hide\n",
+    "#| echo: false\n",
+    "\n",
     "import boto3\n",
     "import os\n",
     "import io\n",
@@ -134,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hide\n",
+    "#| echo: false\n",
     "\n",
     "# Load data from S3\n",
     "raw_df = pd.read_parquet(f's3://tesco-scrape-pipeline-app-tescoscrapes3bucket-1x8yycv16azsa/master_data/scraped_product_data.parquet')"
@@ -147,7 +138,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hide\n",
+    "#| echo: false\n",
+    "\n",
     "dtype_map = {\n",
     "    'name': str,\n",
     "    'price_per_unit': float,\n",
@@ -215,7 +207,9 @@
     }
    ],
    "source": [
-    "# hide\n",
+    "#| echo: false\n",
+    "#| output: false\n",
+    "\n",
     "# Still some NaNs in category columns - about 4%\n",
     "preproc_df.isna().mean()"
    ]
@@ -227,7 +221,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hide\n",
+    "#| echo: false\n",
+    "\n",
     "# Shouldn't be any NaNs in the category columns if there are no NaNs in name column\n",
     "# Remedy this by creating mappings for product name to product sub-category for all sub-categories and apply to name column\n",
     "\n",
@@ -269,7 +264,9 @@
     }
    ],
    "source": [
-    "# hide\n",
+    "#| echo: false\n",
+    "#| output: false\n",
+    "\n",
     "# Much better now\n",
     "preproc_df.isna().mean()"
    ]
@@ -410,7 +407,10 @@
     }
    ],
    "source": [
-    "#  hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "#| column: page\n",
+    "\n",
     "reorder_cols = [\n",
     "    'name','date','category_1','category_2','category_3','category_4',\n",
     "    'price_per_unit','price_per_weight_quant','weight_quant_unit',\n",
@@ -460,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hide\n",
+    "#| echo: false\n",
     "\n",
     "# Transform price data to be on a weekly basis, use median as aggregation function\n",
     "# Takes a while because there's so many values for category_4 column\n",
@@ -571,7 +571,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "\n",
     "(\n",
     "    grouped_df\n",
     "    [grouped_df['name'] == 'Tesco Ground Cinnamon 40G Jar']\n",
@@ -693,7 +695,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "\n",
     "row_lst = []\n",
     "for cat in grouped_df['category_1'].unique():\n",
     "    mask = grouped_df['category_1'] == cat\n",
@@ -757,7 +761,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hide\n",
+    "#| echo: false\n",
+    "#| output: false\n",
+    "\n",
     "categories = ['category_1', 'category_2', 'category_3', 'category_4']\n",
     "cat_index_dict = {}\n",
     "skipped_cat_dict= {}\n",
@@ -880,7 +886,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "\n",
     "mask = cat_index_dict['category_1']['category_1']=='fresh-food'\n",
     "(\n",
     "    cat_index_dict['category_1']\n",
@@ -976,7 +984,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "\n",
     "mask = (\n",
     "    (cat_index_dict['category_2']['category_1']=='fresh-food')\n",
     "    & (cat_index_dict['category_2']['category_2']=='fresh-meat-and-poultry')\n",
@@ -1081,7 +1091,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "\n",
     "mask = (\n",
     "    (cat_index_dict['category_3']['category_1']=='fresh-food')\n",
     "    & (cat_index_dict['category_3']['category_2']=='fresh-meat-and-poultry')\n",
@@ -1192,7 +1204,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "\n",
     "mask = (\n",
     "    (cat_index_dict['category_4']['category_1']=='fresh-food')\n",
     "    & (cat_index_dict['category_4']['category_2']=='fresh-meat-and-poultry')\n",
@@ -1233,7 +1247,9 @@
     }
    ],
    "source": [
-    "# hide\n",
+    "#| echo: false\n",
+    "#| output: false\n",
+    "\n",
     "for cat in skipped_cat_dict:\n",
     "    print(cat, len(skipped_cat_dict[cat]))"
    ]
@@ -1278,7 +1294,8 @@
     }
    ],
    "source": [
-    "# hide\n",
+    "#| echo: false\n",
+    "#| output: false\n",
     "\n",
     "# Calculate overall price increase between beginning and end period\n",
     "earliest_date_mask = cat_index_dict['category_1']['date'] == '2022-02-28'\n",
@@ -1296,9 +1313,11 @@
    "id": "8d246a2c",
    "metadata": {},
    "source": [
-    "**Tip: This chart is interactive!**\n",
-    "<br>\n",
-    "Hover your mouse over the sector to look at the index number of categories (if on mobile, tap and hold the name of the category). Clicking on a sector will focus on that particular category and its subcategories. There are 4 levels of categories but only 3 levels are shown at any one time for better performance."
+    ":::{.callout-tip}\n",
+    "## This chart is interactive!\n",
+    "\n",
+    "Hover your mouse over the sector to look at the index number of categories (if on mobile, tap and hold the name of the category). Clicking on a sector will focus on that particular category and its subcategories. There are 4 levels of categories but only 3 levels are shown at any one time for better performance.\n",
+    ":::"
    ]
   },
   {
@@ -1308,7 +1327,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hide\n",
+    "#| echo: false\n",
+    "#| output: false\n",
     "\n",
     "# Plotly Express' Sunburst chart aggregates the column given as color argument using weighted arithmetic mean\n",
     "# Since we want to use index number column as color argument, weighted arithmentic mean isn't appropriate to use\n",
@@ -1884,7 +1904,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "#| column: page\n",
     "\n",
     "tmp_df = cat_index_dict['category_4'].reset_index(drop=True).copy()\n",
     "latest_date_mask = tmp_df['date'] == '2022-06-13'\n",
@@ -1929,7 +1951,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hide\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "\n",
     "data_list = []\n",
     "cat_type_map = {\n",
     "    'category_2': 'Secondary Categories',\n",
@@ -2054,7 +2078,10 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "#| column: page\n",
+    "\n",
     "order = ['Decrease', 'No Change', 'Increase'][::-1]\n",
     "range_ = ['#4c78a8', '#cccccc', '#e45756'][::-1]\n",
     "\n",
@@ -2097,14 +2124,14 @@
    "source": [
     "It's very clear from the above that the bakery and frozen food primary categories had all secondary, tertiary, and quaternary subcategories either increase in price or stay the same! We'll have to note that they're the two smallest primary categories by both total basket value and number of subcategories, but there are ongoing macroeconomic events that are affecting both the supply chain and cost of businesses. \n",
     "\n",
-    "As of writing, the 2022 Russian invasion of Ukraine is affecting the two largest global suppliers of wheat. Russia produces 11% of the world's wheat and accounts for 19% of global wheat exports. On the other hand, Ukraine produces 3% of the world's wheat and accounts for 9% of global wheat exports. Both of these together account for more than a quarter of the world's wheat export market {% fn 1 %}. You can guess what ingredient bakery goods use that's derived from wheat.\n",
+    "As of writing, the 2022 Russian invasion of Ukraine is affecting the two largest global suppliers of wheat. Russia produces 11% of the world's wheat and accounts for 19% of global wheat exports. On the other hand, Ukraine produces 3% of the world's wheat and accounts for 9% of global wheat exports. Both of these together account for more than a quarter of the world's wheat export market.[^1] You can guess what ingredient bakery goods use that's derived from wheat.\n",
     "\n",
-    "Energy prices have also been rising throughout 2022 and are forecasted to reach unprecedented levels during the first two quarters of 2023. The electricity price (kWh) cap rose from 20.8p in Q1 2022 to 28.3p in Q2 2022 {% fn 2 %}, an increase of 36%. This will affect the production costs of all goods, more so if they need to be kept cold or frozen.\n",
+    "Energy prices have also been rising throughout 2022 and are forecasted to reach unprecedented levels during the first two quarters of 2023. The electricity price (kWh) cap rose from 20.8p in Q1 2022 to 28.3p in Q2 2022,[^2] an increase of 36%. This will affect the production costs of all goods, more so if they need to be kept cold or frozen.\n",
     "\n",
     "Generally speaking, it does seem that the vast majority of subcategories have experienced an increase in price, no matter what level of category granularity is being looked at. The drinks and food cupboard primary categories are the least affected as they're the only two that contain secondary categories that have decreased in price; that being said they only account for 11.1% and 18.8% of the total number of their respective total secondary categories.\n",
     "\n",
-    "{{ 'Source: https://asmith.ucdavis.edu/news/russia-ukraine' | fndetail: 1 }}\n",
-    "{{ 'Source: https://www.icaew.com/insights/viewpoints-on-the-news/2022/sept-2022/chart-of-the-week-energy-price-cap-update' | fndetail: 2 }}"
+    "[^1]: Source: https://asmith.ucdavis.edu/news/russia-ukraine\n",
+    "[^2]: Source: https://www.icaew.com/insights/viewpoints-on-the-news/2022/sept-2022/chart-of-the-week-energy-price-cap-update"
    ]
   },
   {
@@ -2198,7 +2225,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "#| column: page\n",
     "\n",
     "selection = alt.selection_multi(fields=['category_1'], bind='legend')\n",
     "\n",
@@ -2337,7 +2366,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "#| column: page\n",
     "\n",
     "primary_cat = 'fresh-food'\n",
     "mask = cat_index_dict['category_2']['category_1'] == primary_cat\n",
@@ -2625,7 +2656,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "\n",
     "tmp_df = cat_index_dict['category_2'][mask]\n",
     "latest_date_mask = tmp_df['date'] == '2022-06-13'\n",
     "\n",
@@ -2650,13 +2683,13 @@
    "source": [
     "Looking at the top 6 rows, it's primarily dairy and fresh meat and poultry that's driving up the index of fresh food items. Both of these being products produced from animals. \n",
     "\n",
-    "According to the Specialty Food Magazine, the price increase of dairy products can be largely attributed to the spiralling price of feed, fuel, and fertiliser{% fn 3 %}. All of these three production costs have been subject to large price hikes. For feed and fertiliser, it can be attributed to the Russian invasion on Ukraine, higher energy costs, and increased global demand{% fn 4 %}. For fuel, the primary driver is an increase in the refining cost of crude oil{% fn 5 %}.\n",
+    "According to the Specialty Food Magazine, the price increase of dairy products can be largely attributed to the spiralling price of feed, fuel, and fertiliser.[^3] All of these three production costs have been subject to large price hikes. For feed and fertiliser, it can be attributed to the Russian invasion on Ukraine, higher energy costs, and increased global demand.[^4] For fuel, the primary driver is an increase in the refining cost of crude oil.[^5]\n",
     "\n",
     "In Specialty Food Magazine's article they have a quote from the vice-chair of the National Union of Farmers that it takes him two and a half years to get a cow from being born to be actually producing milk which incurs a lot of cost over the time period. In order to maintain their profit margins, they must raise their prices.\n",
     "\n",
-    "{{ 'Source: https://www.specialityfoodmagazine.com/news/dairy-crisis-threatens-spiralling-costs-of-cheese-and-milk-for-indies' | fndetail: 3 }}\n",
-    "{{ 'Source: https://lordslibrary.parliament.uk/rising-cost-of-agricultural-fertiliser-and-feed-causes-impacts-and-government-policy/' | fndetail: 4 }}\n",
-    "{{ 'Source: https://www.allstarcard.co.uk/news-insights/business/why-is-fuel-expensive/' | fndetail: 5 }}"
+    "[^3]: Source: https://www.specialityfoodmagazine.com/news/dairy-crisis-threatens-spiralling-costs-of-cheese-and-milk-for-indies\n",
+    "[^4]: Source: https://lordslibrary.parliament.uk/rising-cost-of-agricultural-fertiliser-and-feed-causes-impacts-and-government-policy/\n",
+    "[^5]: Source: https://www.allstarcard.co.uk/news-insights/business/why-is-fuel-expensive/"
    ]
   },
   {
@@ -2736,7 +2769,10 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "#| column: page\n",
+    "\n",
     "px.imshow(\n",
     "    cat_index_dict['category_2'].pivot_table(index='date', columns=['category_2'], values='index').corr(),\n",
     "    labels=dict(x=\"Secondary Category\", y=\"Secondary Category\", color=\"Correlation\"),\n",
@@ -2831,7 +2867,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "#| column: page\n",
     "\n",
     "primary_cat = 'fresh-food'\n",
     "subcat_1 = 'fresh-meat-and-poultry'\n",
@@ -2964,7 +3002,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "#| column: page\n",
     "\n",
     "primary_cat = 'fresh-food'\n",
     "subcat_1 = 'cheese'\n",
@@ -3097,7 +3137,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "#| column: page\n",
     "\n",
     "primary_cat = 'frozen-food'\n",
     "mask = cat_index_dict['category_2']['category_1'] == primary_cat\n",
@@ -3229,7 +3271,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "#| column: page\n",
     "\n",
     "primary_cat = 'food-cupboard'\n",
     "mask = cat_index_dict['category_2']['category_1'] == primary_cat\n",
@@ -3361,7 +3405,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "#| column: page\n",
     "\n",
     "primary_cat = 'drinks'\n",
     "mask = cat_index_dict['category_2']['category_1'] == primary_cat\n",
@@ -3493,7 +3539,9 @@
     }
    ],
    "source": [
-    "# hide_input\n",
+    "#| echo: false\n",
+    "#| output: true\n",
+    "#| column: page\n",
     "\n",
     "primary_cat = 'bakery'\n",
     "mask = cat_index_dict['category_2']['category_1'] == primary_cat\n",
