Fixed bulletpoint list in inflation notebook

--- a/posts/2022-09-20-tesco-price-analysis.ipynb
+++ b/posts/2022-09-20-tesco-price-analysis.ipynb
@@ -2700,10 +2700,11 @@
     "# Wrapping Up\n",
     "\n",
     "So what have we learned from this exercise?\n",
-    "- pretty much everything sold by Tesco is going up, some more than others;\n",
-    "- the primary driver of the price increases stem from the underlying production costs of items;\n",
-    "- Tesco does not make it easy to scrape their website;\n",
-    "- web-scraping pipelines are in constant need of maintenance due to site changes.\n",
+    "\n",
+    "* pretty much everything sold by Tesco is going up, some more than others;\n",
+    "* the primary driver of the price increases stem from the underlying production costs of items;\n",
+    "* Tesco does not make it easy to scrape their website;\n",
+    "* web-scraping pipelines are in constant need of maintenance due to site changes.\n",
     "\n",
     "That's all for now, I'll see you next time."
    ]
