Moved images to separate folder

--- a/posts/2022-09-20-tesco-price-analysis.ipynb
+++ b/posts/2022-09-20-tesco-price-analysis.ipynb
@@ -16,7 +16,7 @@
     "    - inflation\n",
     "    - analysis\n",
     "    - visualisation\n",
-    "image: inflation_post.jpg\n",
+    "image: images/inflation_post.jpg\n",
     "reference-location: margin\n",
     "---"
    ]
@@ -26,7 +26,7 @@
    "id": "385e9856",
    "metadata": {},
    "source": [
-    "![Source: https://www.rte.ie/news/business/2022/0908/1321302-cso-inflation-figures/](inflation_post.jpg)"
+    "![Source: https://www.rte.ie/news/business/2022/0908/1321302-cso-inflation-figures/](images/inflation_post.jpg)"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "id": "da9c45ca",
    "metadata": {},
    "source": [
-    "![Consumer Prices Index (CPI), Consumer Prices Index with Housing (CPIH), and Owner Occupier's Housing cost (OOH) component.](Figure_1_Annual_CPIH.png)"
+    "![Consumer Prices Index (CPI), Consumer Prices Index with Housing (CPIH), and Owner Occupier's Housing cost (OOH) component.](images/Figure_1_Annual_CPIH.png)"
    ]
   },
   {
