--- a/index.qmd
+++ b/index.qmd
@@ -4,11 +4,10 @@ listing:
   contents: posts
   sort: "date desc"
   type: default
+  fields: [image, title, description, date, reading-time]
   categories: true
-  sort-ui: false
+  sort-ui: true
   filter-ui: false
 page-layout: full
 title-block-banner: true
 ---
-
-
