Finished spotify analysis article

--- a/posts/2022-09-20-tesco-price-analysis.ipynb
+++ b/posts/2022-09-20-tesco-price-analysis.ipynb
@@ -12,7 +12,8 @@
     "date: \"2022/09/20\"\n",
     "toc: true\n",
     "comments: false\n",
-    "categories: \n",
+    "categories:\n",
+    "    - Medium Read\n",
     "    - Inflation\n",
     "    - Analysis\n",
     "    - Visualisation\n",
@@ -1274,11 +1275,7 @@
    "source": [
     "## Overview of Price Changes for All Categories\n",
     "\n",
-    "Let's start with the big picture (quite literally), how did prices change when comparing the basket values of categories?\n",
-    "\n",
-    "Note that the **index numbers presented in the graph below are accurate when rounding to whole numbers**. \n",
-    "\n",
-    "Technical explanation - The numbers get more inaccurate as you go up category granularities due to the way that the index numbers are aggregated. I'm using the most granular dataset that contains index numbers of quaternary categories, these are then aggregated up to the tertiary category level using the harmonic mean weighted by the basket value of the quaternary categories within the tertiary category. This process repeats for the secondary and then the primary categories, the approximation error increasing going up with each category level."
+    "Let's start with the big picture (quite literally), how did prices change when comparing the basket values of categories?"
    ]
   },
   {
@@ -1322,6 +1319,18 @@
     "## This chart is interactive!\n",
     "\n",
     "Hover your mouse over the sector to look at the index number of categories (if on mobile, tap and hold the name of the category). Clicking on a sector will focus on that particular category and its subcategories. There are 4 levels of categories but only 3 levels are shown at any one time for better performance.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80768494",
+   "metadata": {},
+   "source": [
+    ":::{.callout-warning collapse=\"true\"}\n",
+    "## The index numbers presented in the graph below are accurate when rounding to whole numbers!\n",
+    "\n",
+    "Technical explanation - The numbers get more inaccurate as you go up category granularities due to the way that the index numbers are aggregated. I'm using the most granular dataset that contains index numbers of quaternary categories, these are then aggregated up to the tertiary category level using the harmonic mean weighted by the basket value of the quaternary categories within the tertiary category. This process repeats for the secondary and then the primary categories, the approximation error increasing going up with each category level.\n",
     ":::"
    ]
   },
@@ -12620,7 +12629,7 @@
    "id": "9312f15f",
    "metadata": {},
    "source": [
-    "Wow there's a lot going on in that graph, but can definitely be seen that some secondary categories much more than others. Let's take a look at the index values at the end of the graph to quickly look at which secondary categories increased the most."
+    "Wow there's a lot going on in that graph, but can definitely be seen that some secondary categories are increasing much more than others. Let's take a look at the index values at the end of the graph to quickly look at which secondary categories increased the most."
    ]
   },
   {
